# LMS-Qt-Quick-Cpp

./: AsliDaneshjoo.qml  AsliOstad.qml  Azmoon.cpp  Azmoon.h  AzmoonEzafeShod.ui.qml  AzmoonHaDaneshjoo.qml  AzmoonHaOstad.qml  CMakeLists.txt  Daneshjoo.cpp  Daneshjoo.h  DaneshjooAzmoon.qml  DaneshjooyanDars.qml  Dars.cpp  Dars.h  EzafeKardeneDars.qml  Handler.cpp  Handler.h  HomeForm.ui.qml  Karbar.cpp  Karbar.h  Karname.cpp  Karname.h  Karname.qml  KarnameOstad.qml  LM.pro  LM.pro.user.3eff411  LM.pro.user.8fcd827  ListAzmmon.ui.qml  ListAzmmon.ui.qml.autosave  Ostad.cpp  Ostad.h  OstadAzmoon.ui.qml  Page11Form.qml  README.md  SignUp.qml  Soual.cpp  Soual.h  TamamDarsHaDaneshjoo.qml  Timer.qml  VaredKardanNameAzmoon.qml  (+17 more)
